+ handle add milk pail and shears + edit fishing in Player